--- a/pages/about.html
+++ b/pages/about.html
@@ -143,7 +143,7 @@
       <div class="row align-items-center mt-5">
         <div class="col-md-6">
           <img
-            src="images/christian.jpg"
+            src="images/Christian.jpg"
             class="img-fluid rounded shadow"
             alt="Oy0"
       <div class="col-md-6">
